@@ -110,6 +110,11 @@
   </p>
 
   <p>
+    <label for="form_zipcode">Zipcode</label>
+    <input type="text" maxlength="5" name="form[zipcode]" id="form_zipcode" />
+  </p>
+
+  <p>
     <label for="form_tendency">Tendency</label>
     <select name="form[tendency]" id="form_tendency"></select>
   </p>
